--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -15,8 +15,8 @@
         <nav>
           <ul>
             <li><a href="/homepage">Home</a></li>
-            <li><a href="/books">Catalogo</a></li>
-            <li><a href="/bookIndex">Operazioni Libri</a></li>
+            <li><a href="/authorIndex">Autori</a></li>
+			<li><a th:if="${user}" href="/profile">Recensioni</a></li>
             <li><a href="/login">Login</a></li>
           </ul>
         </nav>
