--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -16,9 +16,10 @@
         <h1 class="logo">Libreria SIW</h1>
         <nav>
           <ul>
+			<li><a href="/homepage">Home</a></li>
             <li><a href="/books">Catalogo</a></li>
-            <li><a href="/bookIndex">Operazioni Libri</a></li>
-            <li><a href="/authorIndex">Operazioni Autori</a></li>
+            <li><a href="/bookIndex">Libri</a></li>
+            <li><a th:if="${user}" href="/profile">Recensioni</a></li> 
             <li><a href="/login">Login</a></li>
           </ul>
         </nav>
