--- a/src/main/resources/templates/formUpdateAuthor.html
+++ b/src/main/resources/templates/formUpdateAuthor.html
@@ -2,58 +2,77 @@
 <html>
   <head>
     <title>Modifica Author</title>
-	<link rel="stylesheet" href="/css/operazioni.css" />
+    <link rel="stylesheet" href="/css/operazioni.css" />
   </head>
   <body>
-	<header>
-		      <a href="/" class="logo-link">
-		        <img src="/images/logo-siwBooks.png" alt="Logo SiwBook" class="logo-img" />
-		      </a>
-		      <div class="navbar">
-		        <h1 class="logo">Libreria SIW</h1>
-		        <nav>
-		          <ul>            
-					<li><a href="/homepage">Home</a></li>
-		            <li><a href="/books">Catalogo</a></li>
-		            <li><a href="/bookIndex">Operazioni Libri</a></li>
-		            <li><a href="/login">Login</a></li>
-		          </ul>
-		        </nav>
-		      </div>
-		    </header>
-    <div><a href="/"><img src="/logo-siw.png" width="20%"/></a></div>
-    <h1>Modifica un autore</h1>
-	<form th:action="@{'/author/' + ${author.id} + '/update'}" method="POST" enctype="multipart/form-data" th:object="${author}">
-      <p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
-      <div>
-        <label>Nome:</label> <span><input required type="text" th:field="${author.name}"/></span>
-        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+    <header>
+      <a href="/" class="logo-link">
+        <img src="/images/logo-siwBooks.png" alt="Logo SiwBook" class="logo-img" />
+      </a>
+      <div class="navbar">
+        <h1 class="logo">Libreria SIW</h1>
+        <nav>
+          <ul>
+            <li><a href="/homepage">Home</a></li>
+            <li><a href="/books">Catalogo</a></li>
+            <li><a href="/bookIndex">Libri</a></li>
+			<li><a th:if="${user}" href="/profile">Recensioni</a></li> 
+            <li><a href="/login">Login</a></li>
+          </ul>
+        </nav>
       </div>
-      <div>
-        <label>Cognome:</label><span><input required type="text" th:field="${author.surname}"/></span>
-        <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></span>
-      </div>
-	  <div>
-	    <label>Nazionalità:</label><span><input required type="text" th:field="${author.nationality}"/></span>
-	    <span th:if="${#fields.hasErrors('nationality')}" th:errors="*{nationality}"></span>
-	  </div>
-	  <div>
-	    <label>Data di nascita:</label><span><input required type="date" th:field="${author.dateOfBirth}"/></span>
-	    <span th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}"></span>
-	  </div>
-	  <div>
-	      <label>Data di morte:</label><span><input type="date" th:field="${author.dateOfDeath}"/></span>
-	      
-	    </div>
-      <div>
-        <label>Immagine:</label><span><input type="file" name="imageFile" /></span>
-      </div>
-	  
-	  <input type="hidden" th:field="*{id}" />
-	  
-	  <div>
-        <span><button type="submit">Conferma</button></span>
-      </div>
-    </form>
+    </header>
+
+    <main class="container">
+      <h1>Modifica un autore</h1>
+
+      <form th:action="@{'/author/' + ${author.id} + '/update'}" method="POST" enctype="multipart/form-data" th:object="${author}">
+        <p th:each="err : ${#fields.globalErrors()}" th:text="${err}" class="error-msg">...</p>
+
+        <div class="form-group">
+          <label for="name">Nome:</label>
+          <input required type="text" id="name" th:field="*{name}" />
+          <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="error-msg"></span>
+        </div>
+
+        <div class="form-group">
+          <label for="surname">Cognome:</label>
+          <input required type="text" id="surname" th:field="*{surname}" />
+          <span th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}" class="error-msg"></span>
+        </div>
+
+        <div class="form-group">
+          <label for="nationality">Nazionalità:</label>
+          <input required type="text" id="nationality" th:field="*{nationality}" />
+          <span th:if="${#fields.hasErrors('nationality')}" th:errors="*{nationality}" class="error-msg"></span>
+        </div>
+
+        <div class="form-group">
+          <label for="dateOfBirth">Data di nascita:</label>
+          <input required type="date" id="dateOfBirth" th:field="*{dateOfBirth}" />
+          <span th:if="${#fields.hasErrors('dateOfBirth')}" th:errors="*{dateOfBirth}" class="error-msg"></span>
+        </div>
+
+        <div class="form-group">
+          <label for="dateOfDeath">Data di morte:</label>
+          <input type="date" id="dateOfDeath" th:field="*{dateOfDeath}" />
+        </div>
+
+        <div class="form-group">
+          <label for="imageFile">Immagine:</label>
+          <input type="file" id="imageFile" name="imageFile" />
+        </div>
+
+        <input type="hidden" th:field="*{id}" />
+
+        <div class="form-group">
+          <button type="submit" class="btn btn-primary">Conferma</button>
+        </div>
+      </form>
+    </main>
+
+    <footer>
+      &copy; 2025 Libreria SIW - Tutti i diritti riservati
+    </footer>
   </body>
 </html>
