--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -15,16 +15,16 @@
 	    <h1 class="logo">Libreria SIW</h1>
 	    <nav>
 	      <ul>
-	        <li><a th:if="${user}" href="/profile">Profilo</a></li> 
 	        <li><a href="/books">Catalogo</a></li>
 	        <li><a href="/bookIndex">Libri</a></li>
-	        <li><a href="/authorIndex">Autori</a></li>
-	        <li><a href="/login">Login</a></li>
-	      </ul>
+	        <li><a href="/authorIndex">Autori</a></li>	
+			<li><a th:if="${user}" href="/profile">Recensioni</a></li> 
+			<li><a href="/login">Login</a></li>
+		  </ul>
 	    </nav>
 	  </div>
 	</header>
-	<main class="container">
+	<main class="container book-list-container">
 	  <h2>I Nostri Libri</h2>
 
 	  <!-- se NON ci sono libri -->
@@ -34,24 +34,32 @@
 
 	  <!-- se CI sono libri -->
 	  <div class="book-grid" th:if="${books != null and books.iterator().hasNext()}">
+	    
 	    <div class="book-card" th:each="book : ${books}">
 	      <a th:href="@{'/book/' + ${book.id}}">
-	       <img th:src="@{'/image/book/' + ${book.id}}" alt="Foto libro" />
+	        <img th:src="@{'/image/book/' + ${book.id}}" alt="Copertina libro" />
 	      </a>
+	      
 	      <div class="book-content">
 	        <h3 class="book-title" th:text="${book.title}">Titolo</h3>
+	        
 	        <p class="book-author" th:if="${book.authors != null and !#lists.isEmpty(book.authors)}">
 	          <span th:each="author, iter : ${book.authors}"
 	                th:text="${author.name + ' ' + author.surname + (iter.last ? '' : ', ')}"></span>
 	        </p>
+	        
 	        <p class="book-author" th:if="${book.authors == null or #lists.isEmpty(book.authors)}">
 	          Autore sconosciuto
 	        </p>
+	        
 	        <p class="book-year">
-	          Anno: <a th:href="@{'/book/year/' + ${book.year}}" th:text="${book.year}">2020</a>
+	          Anno:  <span th:text="'(' + ${book.year} + ')'"></span>
+			  <!--<a th:href="@{'/book/year/' + ${book.year}}" th:text="${book.year}"></a>-->
+			 
 	        </p>
 	      </div>
 	    </div>
+
 	  </div>
 	</main>
 
